--- a/Dose_Nutrients.qmd
+++ b/Dose_Nutrients.qmd
@@ -1,43 +1,36 @@
 ---
 title: "Dose dependence: toxins & nutrients"
-subtitle: "_Everything_ is quantitative"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintPdf
-latexfonts:
-  - package: newtxmath
-    options: 
-      - cmintegrals
-      - cmbraces
-  - package: ebgaramond-maths
-header-includes:
-   - \usepackage{booktabs}
-   - \usepackage{cancel}
+format:
+  pdf: default
+  html: 
+    self-contained: true
+    grid:
+      margin-width: 350px
+format-links: false
+execute:
+  echo: false
+reference-location: margin
 ---
 
-```{r setup, include=FALSE}
-library(tufte)
-library(knitr)
-# invalidate cache when the tufte version changes
-opts_chunk$set(tidy = FALSE, 
-                      message = FALSE, 
-                      warning = FALSE,
-                      echo = FALSE)
-options(htmltools.dir.version = FALSE)
-```
 
 ```{r, include=FALSE}
 library(tidyverse)
 library(scales) # for prettier axis labels
-library(simecol) # for running model 
-library(scales) # for prettier axis labels
-
+# library(simecol) # for running model 
 theme_set(theme_minimal())
 ```
+
 
 # Dose-dependence
 
 ```{r, fig.margin=TRUE, fig.cap="A hypothetical dose response."}
+#| label: fig-DoseResponse
+#| column: margin
+#| fig-cap: "A hypothetical dose-response relationship."
+#| fig-alt: "Line graph showing the proportion of individuals responding, going from 0 to 1 in a sigmoidal pattern with increasing orders of magnitude of the dose."
+
 tibble(Dose = 10^seq(0,5, length.out = 101), 
        Response = 1-exp(-0.0001*Dose)) %>% 
   ggplot(., aes(Dose, Response)) + 
@@ -47,11 +40,15 @@ tibble(Dose = 10^seq(0,5, length.out = 101),
   labs(x="Dose of something", y="Proportion responding somehow\n(e.g., surviving or dying)")
 ```
 
-You may have heard the phrase, "the dose makes the poison." Attributed to Paracelcus^["All things are poison, and nothing is without poison, the dosage alone makes it so a thing is not a poison." -Paracelsus], this maxim expresses a basic principle in toxicology that negative effects increase with the amount or concentration of some potentially harmful substance^[And the reverse is also true. [The dose also makes the cure!](https://www.canr.msu.edu/news/everyday-toxicology-digging-deeper-the-dose-makes-the-poison-the-cure)]. A staple experiment in toxicology is thus, not surprisingly, the _dose-response_ experiment in which groups of organisms are exposed to one of a series of increasing doses of the chemical of interest, usually spanning several orders of magnitude, and the outcome (e.g., death) is observed. Usually there is some sort of sigmoidal (S-shaped) relationship where nothing much happens at low doses and the response increases to a virtual certainty at high enough doses. Note that this relationship is usually sigmoidal only on a logarithmic x-axis. Doubling the dose does not double the probability of a response, but increasing the dose 10-fold might. On the right is an actual dose-response curve involving guinea pigs from [Savransky et al. 2013](https://journals.asm.org/doi/10.1128/IAI.01289-12) as a random example.
+You may have heard the phrase, "the dose makes the poison." Attributed to Paracelcus^["All things are poison, and nothing is without poison, the dosage alone makes it so a thing is not a poison." -Paracelsus], this maxim expresses a basic principle in toxicology that negative effects increase with the amount or concentration of some potentially harmful substance^[And the reverse is also true. [The dose also makes the cure!](https://www.canr.msu.edu/news/everyday-toxicology-digging-deeper-the-dose-makes-the-poison-the-cure)]. A staple experiment in toxicology is thus, not surprisingly, the _dose-response_ experiment in which groups of organisms are exposed to one of a series of increasing doses of the chemical of interest, usually spanning several orders of magnitude, and the outcome (e.g., death) is observed. Usually there is some sort of sigmoidal (S-shaped) relationship where nothing much happens at low doses and the response increases to a virtual certainty at high enough doses (@fig-DoseResponse). Note that this relationship is usually sigmoidal only on a logarithmic x-axis. Doubling the dose does not double the probability of a response, but increasing the dose 10-fold might. @Fig-DoseResponseAnthrax is an actual dose-response curve involving guinea pigs from [Savransky et al. 2013](https://journals.asm.org/doi/10.1128/IAI.01289-12) as a random example.
 
-```{r, fig.margin = TRUE,  fig.cap="The proportion of guinea pigs that died with increasing doses of anthrax spores. (I couldn't find an example with toxins. Indeed, gunea pigs were more often used in  immunology than toxicology. Mice and rats are the real \"guinea pigs\" these days.)"}
+```{r, fig.margin = TRUE,  fig.cap=}
+#| label: fig-DoseResponseAnthrax
+#| column: margin
+#| fig-cap: "The proportion of guinea pigs that died with increasing doses of anthrax spores. (I couldn't find an example with toxins. Indeed, gunea pigs were more often used in  immunology than toxicology. Mice and rats are the real \"guinea pigs\" these days.)"
+#| fig-alt: "A dot plot showing the probability of mortality (y-axis) against the actual inhaled dosage (cfu) and a fitted sigmoidal line. The halfway point is between 10,000 and 100,000 cfu."
 
-include_graphics("Dose-lethality-curve-obtained-by-using-the-log-transformed-estimated-inhaled-dosage-as_W640.jpeg", dpi=600)
+knitr::include_graphics("Dose-lethality-curve-obtained-by-using-the-log-transformed-estimated-inhaled-dosage-as_W640.jpeg", dpi = 900)
 ```
 
 There is something puzzling about this sigmoidal relationship. After all, isn't there simply some lethal dose that can be survived and then anything below that is, at least under good conditions, survivable? And why does the curve taper off slowly when it reaches the maximum? Why does it not just hit the 100\% mark quickly? We can find a sort of answer to both questions by considering the fact that individuals are not all identical.
@@ -59,33 +56,48 @@ There is something puzzling about this sigmoidal relationship. After all, isn't 
 # The tolerance model and heterogeneity in susceptibility 
 
 ```{r, fig.margin=TRUE, fig.show = 'hold', fig.cap="A hypothetical distribution of tolerances in a group of animals (top) and the proportion of the group that would be affected (i.e., die) if exposed to a given dose (bottom)."}
-ggplot(data.frame(x=-6:0), aes(x=x)) + 
+#| label: fig-DoseTol
+#| column: margin
+#| fig-cap: "A hypothetical distribution of tolerances in a group of animals (top) and the proportion of the group that would be affected (i.e., die) if exposed to a given dose (bottom)."
+#| fig-alt: "Top graph is a bell curve and the bottom is a sigmoidal curve. The center of the bell curve aligns with the midpoint (LD50) of the sigmoidal curve."
+
+a <- ggplot(data.frame(x=-6:0), aes(x=x)) + 
   stat_function(fun=dnorm, args = list(mean=-3, sd=1/2)) + 
   labs(x=expression(log[10]~Dose), y="Proportion of population\nwith tolerance threshold at dose")
 
-ggplot(data.frame(x=-6:0), aes(x=x)) + 
+b <- ggplot(data.frame(x=-6:0), aes(x=x)) + 
   stat_function(fun=pnorm, args = list(mean=-3, sd=1/2)) +
   labs(x=expression(log[10]~Dose), y="Proportion of population\naffected at dose")
+
+ggpubr::ggarrange(a,b, ncol=1)
 ```
 
 The "tolerance model"  has its origins in calculating effective doses of insecticides. It has two simple assumptions. First, an individual animal can tolerate (i.e., not get sick or die from) a set amount or concentration of a toxin^[Or toxicant, if it is abiotic in origin.]; beyond that threshold amount they succumb. Second, individuals can vary in their tolerances, perhaps  because of differences liver function (if they have a liver) or efficiency of their detoxifying enzymes or just plain "vigor." Thus, there is a _distribution_ of tolerances in the population. We are usually interested in the average tolerance of a population, but also in the variability; after all, when it comes to insect pests^[Including mosquitoes that vector infectious diseases.] we want to be sure to get rid of virtually all of them! But we can extend the model to other settings and situations, too.
 
-Imagine we are interested in testing the toxicity of Roundup, a glyphosate-based herbicide in the lab using, say, guinea pigs. They exist in a population, albeit a laboratory colony rather than a wild herd^[Can you imagine a herd of wild guinea pigs? Well, [cavy](https://en.wikipedia.org/wiki/Guinea_pig). Either way, it would be ridiculously cute!]), and this population has a distribution of tolerances, which is probably normal bell-shaped curve with a mean of $\mu$ (a concentration Roundup on the log-10 scale) and a standard deviation of $\sigma$. This means that half^[Because in a normal distribution the mean is the same as the median.] the population can withstand just under $\mu$, let's say mg/g, without becoming sick and dying. This half-way point should correspond to the $LD_{50}$, the dose at which half the population is expected to die. At lower doses, the threshold amount of Roundup has not been exceed for nearly as many guinea pigs, but at higher doses the threshold is exceeded for most guinea pigs. Hence, we get a classic, sigmoidal dose-response.
+Imagine we are interested in testing the toxicity of Roundup, a glyphosate-based herbicide in the lab using, say, guinea pigs. They exist in a population, albeit a laboratory colony rather than a wild herd^[Can you imagine a herd of wild guinea pigs? Well, [cavy](https://en.wikipedia.org/wiki/Guinea_pig). Either way, it would be ridiculously cute!]), and this population has a distribution of tolerances, which is probably normal bell-shaped curve with a mean of $\mu$ (a concentration Roundup on the log-10 scale) and a standard deviation of $\sigma$ (@fig-DoseTol, top graph). This means that half^[Because in a normal distribution the mean is the same as the median.] the population can withstand just under $\mu$, let's say mg/g, without becoming sick and dying. This half-way point should correspond to the $LD_{50}$, the dose at which half the population is expected to die. At lower doses, the threshold amount of Roundup has not been exceed for nearly as many guinea pigs, but at higher doses the threshold is exceeded for most guinea pigs. Hence, we get a classic, sigmoidal dose-response (@fig-DoseTol, bottom graph).
 
 
-```{r, fig.margin=TRUE, fig.show = 'hold', fig.cap="Tolerance distributions (top) and proportion that die at a given dose (bottom) for a highly inbred (red) and a more variable, outbred (blue) population."}
-ggplot(data.frame(x=-6:0), aes(x=x)) + 
+```{r}
+#| label: fig-DoseTol2
+#| column: margin
+#| fig-cap: "Tolerance distributions (top) and proportion that die at a given dose (bottom) for a highly inbred (red) and a more variable, outbred (blue) population."
+#| fig-alt: "Top graph has two bell curves and the bottom two sigmoidal curves. The red curves are narrower (top) and steeper sigmoid (bottom) than the blue curves."
+
+
+a <- ggplot(data.frame(x=-6:0), aes(x=x)) + 
   stat_function(fun=dnorm, args = list(mean=-3, sd=1/4), color="red") + 
   stat_function(fun=dnorm, args = list(mean=-3, sd=1), color="blue") + 
   labs(x=expression(log[10]~Dose), y="Proportion of population\nwith tolerance threshold at dose")
 
-ggplot(data.frame(x=-6:0), aes(x=x)) + 
+b <- ggplot(data.frame(x=-6:0), aes(x=x)) + 
   stat_function(fun=pnorm, args = list(mean=-3, sd=1/4), color="red") +
   stat_function(fun=pnorm, args = list(mean=-3, sd=1), color="blue") + 
   labs(x=expression(log[10]~Dose), y="Proportion of population\ninfected at dose")
+
+ggpubr::ggarrange(a,b, ncol=1)
 ```
 
-Now let us imagine that we have two populations of guinea pigs with the same _average_ tolerance (or resistance) to Roundup. The first is an inbred group of animals that are more alike, and thus less variable (smaller $\sigma$) while the second is recently descended from a wild population of outbred animals that has much more variation among individuals (larger $\sigma$). As you would expect, the tolerance  distribution for the wild population is wider than that of the inbred population, but as you might not have expected, you can actually see the outcome in a dose-response experiment, too. The wider distribution of tolerances results in a less-steep sigmoidal curve. Why is that? Hint, pick a point on the x-axis (e.g., -4), and think about what fraction of individuals from each population would succumb. Then pick another (e.g., -2) and repeat. 
+Now let us imagine that we have two populations of guinea pigs with the same _average_ tolerance (or resistance) to Roundup. The first is an inbred group of animals that are more alike, and thus less variable (smaller $\sigma$) while the second is recently descended from a wild population of outbred animals that has much more variation among individuals (larger $\sigma$). As you would expect, the tolerance  distribution for the wild population is wider than that of the inbred population (@fig-DoseTol2, top), but as you might not have expected, you can actually see the outcome in a dose-response experiment, too (@fig-DoseTol2, bottom). The wider distribution of tolerances results in a less-steep sigmoidal curve. Why is that? Hint, pick a point on the x-axis (e.g., -4), and think about what fraction of individuals from each population would succumb. Then pick another (e.g., -2) and repeat. 
 
 So dose-response experiments tell us about the average response, as well as the distribution of responses. That is, it can tell us about the heterogeneity in susceptibility. This is cool in its own right^[And if we switch from thinking about toxins to infections, this can tell us something about how disease moves through or is transmitted in a population!], but it also tells us something important: over a sometimes wide range of concentrations of a toxin, there will _usually_ be some individuals that survive^[Think about what the resulting distribution of tolerance would look like, and their children.]. This is important because, assuming tolerance is heritable, these survivors can go on to reproduce and make a more tolerant population overall. Evolution by natural selection in action!
 
@@ -95,7 +107,12 @@ Of course not all chemicals are toxic (at least not at lower doses), and some ar
 
 We may also see dose-response relationships between concentrations of nutrients and _continuous_ or quantitative responses, like growth rates or reproductive output, because the rate of those processes might be limited by the nutrient. If, for instance, growth is slowed by a iron deficiency, then adding a bit of iron will spur a bit of growth and adding even more iron will, likely, spur even more growth. These sorts of dose-response relationships need not be sigmoidal, but could be sort of threshold-y. But notice that eventually the benefits of additional iron (or any other no longer-limiting nutrient) wane and the growth rate levels of or _saturates_.
 
-```{r, fig.margin=TRUE, fig.show = 'hold', fig.cap="A hypothetical dose-response relationship between the concentration of a limiting nutrient (e.g., Iron) and an organism's growth rate."}
+```{r}
+#| label: fig-DoseResponses
+#| column: margin
+#| fig-cap: "A hypothetical dose-response relationship between the concentration of a limiting nutrient (e.g., Iron) and an organism's growth rate."
+#| fig-alt: "A line graph that shows zero growth (y-axis) with low concentrations of iron in food (x-axis), then at threshold amount the line rises rapidly than slowly flattens out at a maximum growth rate."
+
 ggplot(data.frame(x=0:10), aes(x=x)) + 
   stat_function(fun=function(x) pmax(0, 0.5*(1-exp(-1*(x-1.5)))) ) + 
   labs(x="Concentration of Fe in food", y="Average growth rate (mg/day)")
