--- a/FlowC.qmd
+++ b/FlowC.qmd
@@ -1,29 +1,22 @@
 ---
-title: "Following the flow and fates of carbon"
+title: "The flow & fates of carbon"
 author: "Jesse Brunner"
-date: "`r Sys.Date()`"
-output: tint::tintPdf
-latexfonts:
-  - package: newtxmath
-    options: 
-      - cmintegrals
-      - cmbraces
-  - package: ebgaramond-maths
-header-includes:
-   - \usepackage{booktabs}
-   - \usepackage[version=4]{mhchem}
+#date: "`r Sys.Date()`"
+format:
+  pdf: 
+    include-in-header: 
+      text: |
+        \usepackage[version=4]{mhchem}
+  html: 
+    self-contained: true
+    grid:
+      margin-width: 350px
+format-links: false
+execute:
+  echo: false
+reference-location: margin
 ---
 
-```{r setup, include=FALSE}
-library(tufte)
-# invalidate cache when the tufte version changes
-knitr::opts_chunk$set(tidy = FALSE, 
-                      message = FALSE, 
-                      warning = FALSE,
-                      echo = FALSE,
-                      cache.extra = packageVersion('tufte'))
-options(htmltools.dir.version = FALSE)
-```
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -31,30 +24,30 @@ library(scales) # for prettier axis labels
 library(simecol) # for running model 
 theme_set(theme_minimal())
 ```
-<script type="text/x-mathjax-config">
-        MathJax.Hub.Config({TeX: {extensions:["mhchem.js"]}});
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-You may^[Should!] recall that 1) we can track organic carbon as a way of tracking energy flow within or among ecosystems and 2) that the sum amount of energy for _everything_ of interest in an ecosystem is called $NPP$^[Remember what that stands for? Non-Physician Practitioner? Notice of Privacy Practices? Nuclear Power Plant?]. Moreover, this $NPP$ is what remains after a small part of the energy in the sunlight that strikes a leaf gets turned into sugars, after account for plant respiration. It is a fraction of a fraction of the energy hitting the ground. But that's it. That's all we have to play with. And yet it is enough to fuel amazing communities of diverse organisms in even the least productive places. That still blows my mind.
+Recall that $NPP$ is the energy remaining from sunlight that strikes a leaf, gets turned into sugars, minus what the plant respires. It is a fraction of a fraction of the sun's energy, but it is all that is available for every living in the ecosystem to use! That's all we have to play with. And yet it is enough to fuel amazing communities of diverse organisms in even the least productive places. That still blows my mind.
 
-Now let's think about the flow of carbon through those heterotroph communities.
+Recall, too, that we can track organic carbon as a way of tracking energy flow within or among ecosystems. Let's consider the flow of carbon from $NPP$ through a heterotroph community.
 
 # Seconary production
 
 Let's think about the efficiency with which consumers---the things that eat plants directly, whether a cricket or guinea pig or vegan, take plants' hard-won energy---use the energy in primary producers to make more of themselves. For consistency's sake, let's call this **secondary production**. Where does the energy go, and where is it lost along the way?
 
-```{r, fig.margin = TRUE, fig.cap = "Secondary production of \\emph{Daphnia galatea} \"inspired\" by Urabe \\& Watanabe (1991) Functional Ecology 5:635-641. However, reality is complicated and my estimates are rough.", fig.alt = "Sankey diagram where the width of arrows is proportional to the size of the flow. Starts at the top with 2500 ug/day of available food, then 1200 is diverted because it is not eaten, 715 is diverted because it is defecated, and 36 is diverted to respiration, leaving secondary production of 549 ug/day on the bottom."}
+```{r}
+#| label: fig-sanke
+#| column: margin
+#| fig-cap: "Secondary production of \\emph{Daphnia galatea} \"inspired\" by Urabe \\& Watanabe (1991) Functional Ecology 5:635-641. However, reality is complicated and my estimates are rough."
+#| fig-alt: "Sankey diagram where the width of arrows is proportional to the size of the flow. Starts at the top with 2500 ug/day of available food, then 1200 is diverted because it is not eaten, 715 is diverted because it is defecated, and 36 is diverted to respiration, leaving secondary production of 549 ug/day on the bottom."
 
-knitr::include_graphics("Sankey_DaphniaProduction.png", dpi=900)
+knitr::include_graphics("Sankey_DaphniaProduction.png", dpi=300)
 ```
 
 
-First, some fraction of the plant (or plants in general in an ecosystem) is eaten or _consumed_. Of course most animals tend not to eat toxic parts or sharp, pokey bits. Few animals can eat wood^[And those that can usually have microbial partners that bring the metabolic tools to do so.]. All of which means that the fraction of $NPP$ that is _ingested_ can be much less than one. Do yourself a favor and label on the Sankey diagram the part of the NPP that is consumed or ingested. I'll wait.
+First, some fraction of the plant (or plants in general in an ecosystem) is eaten or _consumed_ (@fig-sanke). Of course most animals tend not to eat toxic parts or sharp, pokey bits. Few animals can eat wood^[Those that can have microbial partners that bring the metabolic tools to do so.]. All of which means that the fraction of $NPP$ that is _ingested_ can be much less than one.
 
 Next, only a fraction of what is consumed becomes _assimilated_ or effectively taken up during digestion. The rest is simply pooped out or coughed up or similar. Again, woody things and celery are hard to digest, so they tend to be pooped out, leaving little to be assimilated. Label on the diagram that part that is assimilated.
 
-Finally, animals must use some of the energy they have assimilated for respiration---$Rh$ for heterotroph respiration)---to keep themselves alive and digesting food. This leaves only a fraction of the energy assimilated for _production_ of new animal (i.e., growth, reproduction, or anything that takes making more cells or structures). Make sure you see the fraction of energy that is left for secondary production on the Sankey diagram.
+Finally, animals must use some of the energy they have assimilated for respiration---$Rh$ for heterotroph respiration)---to keep themselves alive and digesting food. This leaves only a fraction of the energy assimilated for _production_ of new animal (i.e., growth, reproduction, or anything that takes making more cells or structures). Make sure you see the fraction of energy that is left for secondary production on the Sankey diagram (@fig-sanke).
 
 We can think of the efficiency of each of these steps separately---consumption efficiency (CE), assimilation efficiency (AE), and production efficiency (PE)---or their overall product^[$CE \times AE \times PE = TE$], **trophic efficiency**, as in, the efficiency of going from one trophic level to the next. That is, how much of the energy available in one trophic level (i.e., plants and other primary produces) is turned into grazers or other other plant eaters? This number can vary quite a lot, but is usually on the order of 5--50%. Does that strike you as high or low?
 
@@ -88,12 +81,16 @@ The basic concepts hold, but we should not think of them as absolutes. The point
 
 # Putting it all together
 
-So ecosystem ecologists get very excited about all of these energy (and nutrient) flows^[Or fluxes, in the parlance.], especially since Howard T. Odum presented his work on Silver Springs ecosystem in the 1950s. Check out this lovely Sankey^[All of these diagrams where the width of the arrows is proportional to the size of the flow are or are inspired by Sankey diagrams.] diagram!
+So ecosystem ecologists get very excited about all of these energy (and nutrient) flows^[Or fluxes, in the parlance.], especially since Howard T. Odum presented his work on Silver Springs ecosystem in the 1950s. Check out this lovely Sankey^[All of these diagrams where the width of the arrows is proportional to the size of the flow are or are inspired by Sankey diagrams.] diagram (@fig-silver)!
 
 
-```{r, fig-fullwidth,, fig.cap="From Odum, H. T. (1971). Environment, Power, and Society. Wiley-Interscience New York, N.Y..", fig.alt = "A Sanke diagram that looks like the path of a braided stream. Sunlight, which goes to photosynthesis, and imports of energy enter from the upper left, some of which goes to herbivores, whwch then moves to carnivors, and then to top carnivores. All boxes---representing primary producers, herbivores, carnivores, and top carnivores---have arrows that go to a box representing decomposers. Every box also has arrows flowing out of the system as heat. "}
+```{r}
+#| label: fig-silver
+#| fig-cap-location: margin
+#| fig-cap: "From Odum, H. T. (1971). Environment, Power, and Society. Wiley-Interscience New York, N.Y.."
+#| fig-alt: "A Sanke diagram that looks like the path of a braided stream. Sunlight, which goes to photosynthesis, and imports of energy enter from the upper left, some of which goes to herbivores then to carnivors and then to top carnivores. All boxes---representing primary producers, herbivores, carnivores, and top carnivores---have arrows that go to a box representing decomposers. Every box also has arrows flowing out of the system as heat."
 
-knitr::include_graphics("Silver_Spring_Model.jpg", dpi=600)
+knitr::include_graphics("Silver_Spring_Model.jpg", dpi=200)
 ```
 
 See the inputs of energy in the form of sunlight and "imports," which was basically biomass washing into the stream (or bread being thrown to ducks)? In this system, which was bigger, $NPP$ or "imports"? See how the amount of energy to each subsequent trophic level is reduced? Notice how everything that isn't being lost to heat eventually goes to the decomposers, including the decomposers? This figure shows so much in such an appealing form! 
