converted dose_infections

--- a/ChemicalReactions.qmd
+++ b/ChemicalReactions.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Organisms as sacks of chemical reactions"
 author: "Jesse Brunner"
-#date: "`r Sys.Date()`"
+date: "`r Sys.Date()`"
 format:
   pdf: 
     include-in-header: 
